# safer-ffi-gen

./: Cargo.toml  LICENSE
.github/workflows/: build.yml
safer-ffi-gen/: Cargo.toml
safer-ffi-gen-core/: Cargo.toml
safer-ffi-gen-core/src/: lib.rs
safer-ffi-gen-macro/: Cargo.toml
safer-ffi-gen-macro/src/: enum_to_error_code.rs  error.rs  ffi_module.rs  ffi_signature.rs  ffi_type.rs  lib.rs  specialization.rs  test_utils.rs  utils.rs
safer-ffi-gen/examples/: basic_usage.rs
safer-ffi-gen/src/: async_util.rs  error.rs  lib.rs  opaque.rs
safer-ffi-gen/src/error/: with_std.rs  without_std.rs
safer-ffi-gen/src/with_std/: error.rs
safer-ffi-gen/src/without_std/: error.rs
safer-ffi-gen/tests/: array.rs  clone.rs  conditional_compilation.rs  conditional_variant.rs  enum_to_error_code.rs  enumeration.rs  error.rs  generic.rs  generic_module.rs  last_error.rs  lifetime.rs  opaque.rs  opaque_enumeration.rs  repr_c.rs  return_lifetime.rs  self_type.rs  slice.rs  string.rs  transparent.rs  tuple.rs  unit_return_type.rs  vec.rs
