[package]
name = "safer-ffi-gen-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
heck = "0.4.1"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits", "fold", "full", "visit", "visit-mut"] }
thiserror = "1.0.39"

[dev-dependencies]
assert2 = "0.3.10"
