[package]
name = "safer-ffi-gen-macro"
version = "0.7.0"
authors = ["Tom Leavy", "Stephane Raux"]
description = "Proc macro implementation for safer-ffi-gen"
edition = "2021"
license = "MIT"
repository = "https://github.com/tomleavy/safer-ffi-gen"


[lib]
proc-macro = true

[dependencies]
heck = "0.4.1"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.10", features = ["extra-traits", "fold", "full", "visit", "visit-mut"] }
thiserror = "1.0.39"

[dev-dependencies]
assert2 = "0.3.10"
