[package]
name = "safer-ffi-gen"
version = "0.9.0"
authors = ["Tom Leavy", "Stephane Raux"]
description = "FFI wrapper generator based on safer-ffi"
edition = "2021"
license = "MIT"
repository = "https://github.com/tomleavy/safer-ffi-gen"


[features]
default = ["std"]
headers = ["safer-ffi/headers", "std"]
std = ["once_cell/std", "safer-ffi/std"]

[dependencies]
safer-ffi-gen-macro = { path = "../safer-ffi-gen-macro/", version = "0.9.0"}
safer-ffi = { version = "0.1.0", default-features = false, features = ["alloc", "proc_macros"] }
once_cell = { version = "1.9", default-features = false, features = ["alloc", "critical-section"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[[example]]
name = "basic_usage"
required-features = ["std"]

[[test]]
name = "last_error"
required-features = ["std"]
